tools/tests/ui/fail/l1082.cnf
// Test file for error code: L1082
// Expected error: Underflow Unterminated character in variable declaration -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
